# opengeh-wholesale

./: .editorconfig  .gitattributes  .gitignore  .licenserc.json  .markdownlint.json  .tool-versions  COMMUNITY.md  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  Test Results - pytest_for_calculation_logic_features_wholesale_calculations_monthly_tariff_from_hourly_per_ga_co_es_when_montly_amount_test_calculation_execute_test_execute__returns_expected.html  coverage_overview_output.csv  dh3-infrastructure.sln  global.json  tox.ini  wordlist.txt
source/databricks/settlement_report/: README.md  pyproject.toml  setup.py
source/databricks/settlement_report/contracts/: settlement-report-balance-fixing-parameters-reference.txt  settlement-report-job-parameters-reference.txt  settlement-report-wholesale-calculations-parameters-reference.txt
source/databricks/settlement_report/package/: __init__.py  settlement_report_job.py
source/databricks/settlement_report/settlement_report_job/: __init__.py  args_helper.py  constants.py  energy_results_factory.py  entry_point.py  entrypoint.py  logger.py  market_naming_convention.py  settlement_report.py  settlement_report_args.py  settlement_report_job_args.py  table_column_names.py  time_series_factory.py  utils.py
source/databricks/settlement_report/test_data/: metering_points.csv
source/databricks/settlement_report/tests/: conftest.py  dbutils_fixture.py  fixtures.py  integration_test_configuration.py  metering_point_time_series_factory.py  test_data_helper.py  test_settlement_report_utils.py  testsession_configuration.py  utils.py
source/geh_wholesale/: .tool-versions  README.md  pyproject.toml
source/geh_wholesale/contracts/wholesale_internal/: __init__.py
source/geh_wholesale/notebooks/: Inspect basis data.py
source/geh_wholesale/notebooks/data-anonymisation/: anonymise_calculation_input_data.py  anonymise_wholesale_output_energy_results_data.py  anonymise_wholesale_output_main.py  anonymise_wholesale_output_wholesale_results_data.py  load_performance_test_data.py  move_anonymised_data_to_target_table.py
source/geh_wholesale/notebooks/issue-32/: add-gridarea-805-806-to-eventhub.scala  balance-fixing-poc.py  fix-gridarea-events.py
source/geh_wholesale/src/geh_wholesale/: __init__.py  calculator_job.py  container.py
source/geh_wholesale/tests/: __init__.py  conftest.py  integration_test_configuration.py  testsession_configuration.py
source/geh_wholesale/tests/calculation/: charges_factory.py
source/geh_wholesale/tests/calculator_job/: __init__.py  configuration.py  conftest.py  test_energy_calculation.py  test_start.py  test_start_with_deps.py  test_wholesale_calculation.py
source/geh_wholesale/tests/codelists/: test_calculation_type.py
source/geh_wholesale/tests/common/: test_datetime_utils.py  test_table_properties.py
source/geh_wholesale/tests/contracts/: databases_and_schemas.py
source/geh_wholesale/tests/coverage/: The Covernator.xlsx  all_test_cases.py  coverage_mapping.sample.yml  run_covernator.py
source/geh_wholesale/tests/entry_points/: test_entry_points.py
source/geh_wholesale/tests/helpers/: data_frame_utils.py  delta_table_utils.py  mock_helper.py  spark_helper.py  spark_sql_migration_helper.py
source/geh_wholesale/tests/infrastructure/: test_calculator_args.py  test_infrastructure_settings.py
source/geh_wholesale/tests/optimize_job/: test_delta_optimization.py
source/geh_wholesale/tests/scenario_tests/: readme.md
source/geh_wholesale/tests/scenarios/: conftest.py
source/geh_wholesale/tests/test_files/: ChargePricePoints.csv  (+2 more)
(+11423 files in other folders)
