[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opengeh-settlement-report"
version = "1.0"
description = "Tools for settlement report"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Energinet DataHub A/S"}]
dependencies = [
    "ConfigArgParse==1.5.3",
    "pyspark==3.5.1",
    "delta-spark==3.1.0",
    "python-dateutil==2.8.2",
    "azure-core==1.30.0",
    #"opengeh-app @ file:///opt/project/source/databricks/app/app",
    #"opengeh-app @ file:///workspaces/opengeh-wholesale/source/databricks/app/app",
    #"opengeh-app @ file://source/databricks/app/app",
    "opengeh-app",
]

[project.entry-points.console_scripts]
create_settlement_report = "settlement_report_job.entrypoint:start"

#[tool.setuptools]
#package-dir = {"" = "src"}
#
#[tool.setuptools.packages.find]
#where = ["src"]

[tool.setuptools.packages.find]
exclude = ["contracts*"]
